force-app/main/default/objects/os_Request__c/os_Request__c.object-meta.xml
<CustomObject>
    <label>Inquiry</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Inquiry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inquiry</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>