force-app/main/default/objects/os_Request__c/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <label>Community</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Community</valueSetName>
    </valueSet>
</CustomField>