force-app/main/default/objects/os_Request__c/fields/Number_of_Beds_F__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Beds_F__c</fullName>
    <label>Number of Beds F</label>
    <length>100</length>
    <type>Text</type>
</CustomField>