force-app/main/default/objects/os_Request__c/fields/os_1_Day_Deadline__c.field-meta.xml
<CustomField>
    <fullName>os_1_Day_Deadline__c</fullName>
    <label>1-Day Deadline</label>
    <type>DateTime</type>
</CustomField>