force-app/main/default/objects/os_Request__c/fields/os_24HR_Activity_Deadline__c.field-meta.xml
<CustomField>
    <fullName>os_24HR_Activity_Deadline__c</fullName>
    <formula>os_Last_Assigned__c +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is 24 hours from the day and time that this Inquiry was assigned to the agent.
This value is updated by a workflow, and is visible only to system admins (not agents)</inlineHelpText>
    <label>1 Day Deadline</label>
    <type>DateTime</type>
</CustomField>