force-app/main/default/objects/os_Request__c/fields/os_30_Day_Deadline__c.field-meta.xml
<CustomField>
    <fullName>os_30_Day_Deadline__c</fullName>
    <label>30 Day Deadline</label>
    <type>DateTime</type>
</CustomField>