force-app/main/default/objects/os_Request__c/fields/os_3rd_Party_Agency__c.field-meta.xml
<CustomField>
    <fullName>os_3rd_Party_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3rd Party Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Requests (3rd Party Agency)</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>