force-app/main/default/objects/os_Request__c/fields/os_3rd_Party_Agency_Client__c.field-meta.xml
<CustomField>
    <fullName>os_3rd_Party_Agency_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Client</relationshipName>
    <type>Lookup</type>
</CustomField>