force-app/main/default/objects/os_Request__c/fields/os_7_Day_Deadline__c.field-meta.xml
<CustomField>
    <fullName>os_7_Day_Deadline__c</fullName>
    <label>7 Day Deadline</label>
    <type>DateTime</type>
</CustomField>