force-app/main/default/objects/os_Request__c/fields/os_Active__c.field-meta.xml
<CustomField>
    <fullName>os_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>