force-app/main/default/objects/os_Request__c/fields/os_Additional_Cities__c.field-meta.xml
<CustomField>
    <fullName>os_Additional_Cities__c</fullName>
    <label>Additional Cities</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>