force-app/main/default/objects/os_Request__c/fields/os_Address_pb__c.field-meta.xml
<CustomField>
    <fullName>os_Address_pb__c</fullName>
    <label>Property Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>