force-app/main/default/objects/os_Request__c/fields/os_Adult_Community__c.field-meta.xml
<CustomField>
    <fullName>os_Adult_Community__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adult Community</label>
    <type>Checkbox</type>
</CustomField>