force-app/main/default/objects/os_Request__c/fields/os_Age__c.field-meta.xml
<CustomField>
    <fullName>os_Age__c</fullName>
    <label>Age</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Modern</fullName>
            </value>
            <value>
                <fullName>Period</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>