force-app/main/default/objects/os_Request__c/fields/os_Agency_Type__c.field-meta.xml
<CustomField>
    <fullName>os_Agency_Type__c</fullName>
    <formula>TEXT(os_Account__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Type</label>
    <type>Text</type>
</CustomField>