force-app/main/default/objects/os_Request__c/fields/os_Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>os_Agent_Email__c</fullName>
    <label>Agent Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>