force-app/main/default/objects/os_Request__c/fields/os_Agent_Feedback__c.field-meta.xml
<CustomField>
    <fullName>os_Agent_Feedback__c</fullName>
    <label>Agent Feedback</label>
    <type>TextArea</type>
</CustomField>