force-app/main/default/objects/os_Request__c/fields/os_Agent_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>os_Agent_Full_Name__c</fullName>
    <label>Agent Full Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>