force-app/main/default/objects/os_Request__c/fields/os_Agent_s_Active_Inquiries__c.field-meta.xml
<CustomField>
    <fullName>os_Agent_s_Active_Inquiries__c</fullName>
    <formula>Owner:User.os_Active_Inquiries__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent&apos;s # Active Inquiries</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>