force-app/main/default/objects/os_Request__c/fields/os_AgentFirstName__c.field-meta.xml
<CustomField>
    <fullName>os_AgentFirstName__c</fullName>
    <label>Listing Agent First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>