force-app/main/default/objects/os_Request__c/fields/os_Amend_Date_UK__c.field-meta.xml
<CustomField>
    <fullName>os_Amend_Date_UK__c</fullName>
    <label>Amend Date (UK)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>