force-app/main/default/objects/os_Request__c/fields/os_AML_Seller_Count__c.field-meta.xml
<CustomField>
    <fullName>os_AML_Seller_Count__c</fullName>
    <label>AML Seller Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>