force-app/main/default/objects/os_Request__c/fields/os_Area_Familiarity__c.field-meta.xml
<CustomField>
    <fullName>os_Area_Familiarity__c</fullName>
    <label>Area Familiarity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>