force-app/main/default/objects/os_Request__c/fields/os_Assign_Owner_using_Assignment_Rules__c.field-meta.xml
<CustomField>
    <fullName>os_Assign_Owner_using_Assignment_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign Owner using Assignment Rules</label>
    <type>Checkbox</type>
</CustomField>