force-app/main/default/objects/os_Request__c/fields/os_ATR_Fee_Status__c.field-meta.xml
<CustomField>
    <fullName>os_ATR_Fee_Status__c</fullName>
    <label>Develpment Projects Fee Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paid to Agency</fullName>
            </value>
            <value>
                <fullName>Paid to LSIR</fullName>
            </value>
            <value>
                <fullName>Not paid to Agency</fullName>
            </value>
            <value>
                <fullName>Not paid to LSIR</fullName>
            </value>
            <value>
                <fullName>Paid to LSIR and Agency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>