force-app/main/default/objects/os_Request__c/fields/os_ATR_Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>os_ATR_Unit_Number__c</fullName>
    <label>Develpment Projects Unit Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>