force-app/main/default/objects/os_Request__c/fields/os_B2B_Agent__c.field-meta.xml
<CustomField>
    <fullName>os_B2B_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>B2B Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>B2BAgent</relationshipName>
    <type>Lookup</type>
</CustomField>