force-app/main/default/objects/os_Request__c/fields/os_B2B_Buyers_Agent_Mobile__c.field-meta.xml
<CustomField>
    <fullName>os_B2B_Buyers_Agent_Mobile__c</fullName>
    <label>B2B Buyers Agent Mobile</label>
    <length>50</length>
    <type>Text</type>
</CustomField>