force-app/main/default/objects/os_Request__c/fields/os_B2B_Buyers_Nationality__c.field-meta.xml
<CustomField>
    <fullName>os_B2B_Buyers_Nationality__c</fullName>
    <label>B2B Buyers Nationality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>