force-app/main/default/objects/os_Request__c/fields/os_Backup_LocationTemporary__c.field-meta.xml
<CustomField>
    <fullName>os_Backup_LocationTemporary__c</fullName>
    <label>Backup Location (Temporary)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>