force-app/main/default/objects/os_Request__c/fields/os_Basement_pb__c.field-meta.xml
<CustomField>
    <fullName>os_Basement_pb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Basement</label>
    <type>Checkbox</type>
</CustomField>