force-app/main/default/objects/os_Request__c/fields/os_BasementType__c.field-meta.xml
<CustomField>
    <fullName>os_BasementType__c</fullName>
    <label>Basement Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>