force-app/main/default/objects/os_Request__c/fields/os_Bathroom_US_min__c.field-meta.xml
<CustomField>
    <fullName>os_Bathroom_US_min__c</fullName>
    <label>Bathroom - min</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>