force-app/main/default/objects/os_Request__c/fields/os_Bathrooms_US_max__c.field-meta.xml
<CustomField>
    <fullName>os_Bathrooms_US_max__c</fullName>
    <label>Bathrooms Max</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>