force-app/main/default/objects/os_Request__c/fields/os_Bedrooms_pb_min__c.field-meta.xml
<CustomField>
    <fullName>os_Bedrooms_pb_min__c</fullName>
    <label>Bedrooms - min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>