force-app/main/default/objects/os_Request__c/fields/os_Brokers_Listing_ID_from_Frontdesk__c.field-meta.xml
<CustomField>
    <fullName>os_Brokers_Listing_ID_from_Frontdesk__c</fullName>
    <label>Brokers Listing ID from Frontdesk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>