force-app/main/default/objects/os_Request__c/fields/os_BuildingAndDevelopments__c.field-meta.xml
<CustomField>
    <fullName>os_BuildingAndDevelopments__c</fullName>
    <label>Buildings and Developments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>