force-app/main/default/objects/os_Request__c/fields/os_Buyer_Position__c.field-meta.xml
<CustomField>
    <fullName>os_Buyer_Position__c</fullName>
    <label>Buyer Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>To Live In</fullName>
            </value>
            <value>
                <fullName>Additional Residence</fullName>
            </value>
            <value>
                <fullName>Investor/To Let</fullName>
            </value>
            <value>
                <fullName>Land Trader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>