force-app/main/default/objects/os_Request__c/fields/os_Buying_Reason__c.field-meta.xml
<CustomField>
    <fullName>os_Buying_Reason__c</fullName>
    <label>Buying Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash Buyer</fullName>
            </value>
            <value>
                <fullName>First Time Buyer</fullName>
            </value>
            <value>
                <fullName>Pending Own Sale</fullName>
            </value>
            <value>
                <fullName>Pending Mortage</fullName>
            </value>
            <value>
                <fullName>Buying Agent</fullName>
            </value>
            <value>
                <fullName>Nothing to Sell</fullName>
            </value>
            <value>
                <fullName>Investor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>