force-app/main/default/objects/os_Request__c/fields/os_BuyingTimeFrame_pb__c.field-meta.xml
<CustomField>
    <fullName>os_BuyingTimeFrame_pb__c</fullName>
    <label>Buying Time Frame</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASAP</fullName>
            </value>
            <value>
                <fullName>1-3 Months</fullName>
            </value>
            <value>
                <fullName>3-6 Months</fullName>
            </value>
            <value>
                <fullName>6-12 Months</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>