force-app/main/default/objects/os_Request__c/fields/os_Campaign_ROI__c.field-meta.xml
<CustomField>
    <fullName>os_Campaign_ROI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign ROI</label>
    <referenceTo>os_Campaign__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>