force-app/main/default/objects/os_Request__c/fields/os_CIF__c.field-meta.xml
<CustomField>
    <fullName>os_CIF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CIF</label>
    <referenceTo>os_CIF__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>