force-app/main/default/objects/os_Request__c/fields/os_City_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>os_City_of_Residence__c</fullName>
    <label>City of Residence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>