force-app/main/default/objects/os_Request__c/fields/os_Client_was_Interested__c.field-meta.xml
<CustomField>
    <fullName>os_Client_was_Interested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client was Interested</label>
    <type>Checkbox</type>
</CustomField>