force-app/main/default/objects/os_Request__c/fields/os_Co_Owner__c.field-meta.xml
<CustomField>
    <fullName>os_Co_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>