force-app/main/default/objects/os_Request__c/fields/os_Comments__c.field-meta.xml
<CustomField>
    <fullName>os_Comments__c</fullName>
    <label>Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>