force-app/main/default/objects/os_Request__c/fields/os_Community__c.field-meta.xml
<CustomField>
    <fullName>os_Community__c</fullName>
    <formula>os_uaefields_Community_Propertyfinder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is used in an automated workflow - Do not Edit or Delete. This is visible only to System Admins</inlineHelpText>
    <label>Community</label>
    <type>Text</type>
</CustomField>