force-app/main/default/objects/os_Request__c/fields/os_Company__c.field-meta.xml
<CustomField>
    <fullName>os_Company__c</fullName>
    <formula>IF( os_Contact__r.os_SystemIsIndividual__c , &apos;n/a&apos; , HYPERLINK(&quot;/&quot; &amp; os_Account__c , os_Account__r.Name ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company</label>
    <type>Text</type>
</CustomField>