force-app/main/default/objects/os_Request__c/fields/os_Construction_pb__c.field-meta.xml
<CustomField>
    <fullName>os_Construction_pb__c</fullName>
    <label>Construction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>