force-app/main/default/objects/os_Request__c/fields/os_Contact__c.field-meta.xml
<CustomField>
    <fullName>os_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Requests (Contact)</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>