force-app/main/default/objects/os_Request__c/fields/os_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>os_Contact_Email__c</fullName>
    <formula>os_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>