force-app/main/default/objects/os_Request__c/fields/os_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>os_Contact_ID__c</fullName>
    <formula>os_Contact__r.os_Contact_18_Digit_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact ID</label>
    <type>Text</type>
</CustomField>