force-app/main/default/objects/os_Request__c/fields/os_Contact_Mobile__c.field-meta.xml
<CustomField>
    <fullName>os_Contact_Mobile__c</fullName>
    <formula>os_Contact__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Mobile</label>
    <type>Text</type>
</CustomField>