force-app/main/default/objects/os_Request__c/fields/os_Contact_name__c.field-meta.xml
<CustomField>
    <fullName>os_Contact_name__c</fullName>
    <formula>os_Contact__r.FirstName+&apos; &apos;+os_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact name</label>
    <type>Text</type>
</CustomField>