force-app/main/default/objects/os_Request__c/fields/os_Contact_Nationality__c.field-meta.xml
<CustomField>
    <fullName>os_Contact_Nationality__c</fullName>
    <formula>TEXT( os_Contact__r.os_Nationality__c	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Nationality</label>
    <type>Text</type>
</CustomField>