force-app/main/default/objects/os_Request__c/fields/os_CoolingType__c.field-meta.xml
<CustomField>
    <fullName>os_CoolingType__c</fullName>
    <label>Cooling Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>